force-app/main/default/objects/Pharma_Project_Account_Goal__c/Pharma_Project_Account_Goal__c.object-meta.xml
<CustomObject>
    <label>Pharma Project Account Goal</label>
    <nameField>
        <label>Account Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Project Account Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>