force-app/main/default/objects/Pharma_Project_Account_Goal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Pharma_Project_Account_Goals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>