force-app/main/default/objects/Pharma_Project_Account_Goal__c/fields/Pharma_Project__c.field-meta.xml
<CustomField>
    <fullName>Pharma_Project__c</fullName>
    <label>Pharma Project</label>
    <referenceTo>Pharma_Project__c</referenceTo>
    <relationshipLabel>Project Account Goals</relationshipLabel>
    <relationshipName>Pharma_Project_Account_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>