force-app/main/default/objects/Pharma_Project_Account_Goal__c/fields/Target_Metric__c.field-meta.xml
<CustomField>
    <fullName>Target_Metric__c</fullName>
    <label>Target Metric</label>
    <length>255</length>
    <type>Text</type>
</CustomField>